Fixed bug in skytasks with features not turning green when hovering. Also changed the hovering color of rngesus drop because it was a bit too dark and hurt my eyes.

--- a/Skyprice/src/rngesus-drop-simulator.css
+++ b/Skyprice/src/rngesus-drop-simulator.css
@@ -34,7 +34,7 @@ body, html {
 }
 
 .feature-box:hover {
-    background-color: #0000CD;
+    background-color: #3982b8;
     transform: scale(1.02);
 }
 
